tests/baselines/reference/bind1.errors.txt
==== tests/cases/compiler/bind1.ts (1 errors) ====
    module M {
        export class C implements I {} // this should be an unresolved symbol I error
                                  ~
!!! bind1.ts(2,31): error TS2095: Could not find symbol 'I'.
    }
    
    